<resources>
    <string name="app_name">Resumy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_basic_info">Basic Info.</string>
    <string name="menu_summary">Summary</string>
    <string name="menu_skills"><![CDATA[Skills & Tools]]></string>
    <string name="menu_experience">Experience</string>
    <string name="menu_education">Education</string>
    <string name="name">Name</string>
    <string name="your_full_name">Your full name</string>
    <string name="click_to_change_image">Click to change image!</string>
    <string name="email">Email</string>
    <string name="your_email_address">Your email address</string>
    <string name="phone">Phone</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="action_save">Save</string>
    <string name="summary_hint">Write something awesome about yourself!</string>
    <string name="success">Success!</string>
    <string name="fail">Failed!</string>
    <string name="add_skills_or_tools">Add skills or tools</string>
    <string name="add">Add</string>
    <string name="action_delete">Delete</string>
    <string name="skills">SKILLS</string>
    <string name="summary">SUMMARY</string>
    <string name="no_experience">No experience added yet! Impress your next employer with your awesome work!</string>
    <string name="add_experience">Add/Edit Experience</string>
    <string name="title">Position Title</string>
    <string name="company_name">Company Name</string>
    <string name="country_and_or_city">Country and/or City</string>
    <string name="currently_working_here">Currently working here.</string>
    <string name="describe_your_responsibilities_and_achievements">Describe your responsibilities and achievements</string>
    <string name="present">Present</string>
    <string name="edit_skills">Edit Skills</string>
    <string name="edit_basic_information">Edit basic information</string>
    <string name="edit_summary">Edit summary</string>
    <string name="start_month">Start Month</string>
    <string name="start_year">Start Year</string>
    <string name="until_month">Until Month</string>
    <string name="until_year">Until Year</string>
    <string name="until">-</string>
    <string name="experience">Experience</string>

    <array name="month_short_names">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </array>

    <array name="month_full_names">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </array>
</resources>