<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="project.ramezreda.resumy.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"
        app:startDestination="@id/action_nav_home_to_nav_summary">
        <action
            android:id="@+id/action_nav_home_to_nav_basic_info"
            app:destination="@id/nav_basic_info"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"
            app:popUpTo="@id/nav_basic_info" />
        <action
            android:id="@+id/action_nav_home_to_nav_summary"
            app:destination="@id/nav_summary"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
        <action
            android:id="@+id/action_nav_home_to_nav_skills"
            app:destination="@id/nav_skills"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/nav_basic_info"
        android:name="project.ramezreda.resumy.ui.basicInfo.BasicInfoFragment"
        android:label="@string/menu_basic_info" />

    <fragment
        android:id="@+id/nav_summary"
        android:name="project.ramezreda.resumy.ui.summary.SummaryFragment"
        android:label="@string/menu_summary"
        tools:layout="@layout/fragment_summary" />

    <fragment
        android:id="@+id/nav_skills"
        android:name="project.ramezreda.resumy.ui.skills.SkillsFragment"
        android:label="@string/menu_skills"
        tools:layout="@layout/fragment_skills" />

    <fragment
        android:id="@+id/nav_experience"
        android:name="project.ramezreda.resumy.ui.experience.ExperienceFragment"
        android:label="@string/menu_experience"
        tools:layout="@layout/fragment_experience" >
        <action
            android:id="@+id/action_nav_experience_to_addExperienceFragment"
            app:destination="@id/addExperienceFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/nav_education"
        android:name="project.ramezreda.resumy.ui.education.EducationFragment"
        android:label="@string/menu_education"
        tools:layout="@layout/fragment_education" />
    <fragment
        android:id="@+id/addExperienceFragment"
        android:name="project.ramezreda.resumy.ui.experience.AddExperienceFragment"
        android:label="@string/add_experience"
        tools:layout="@layout/fragment_add_experience" />
</navigation>